cambios de estilos

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 
 <body>
 
-    <section class="uk-flex uk-flex-center uk-flex-middle uk-height-viewport uk-dark">
-        <div id="calendar" style="width: 650px;"></div>
+    <section class="uk-flex uk-flex-center uk-flex-middle uk-height-viewport uk-dark uk-flex-wrap">
+        <div id="calendar" class="uk-border-rounded" style="width: 750px; background-color: rgb(255, 255, 255); padding: 25px;"></div>
         <article class="uk-margin-medium-left">
-            <div class="uk-inline" style="height: 550px;">
+            <div class="uk-inline uk-border-rounded" style="height: 600px; background-color: rgb(255, 255, 255); padding: 15px;">
                 <section class="uk-flex uk-flex-between" style="width: 400px;">
                     <h3 class="uk-margin-remove">hola</h3>
-                    <h3 class="uk-margin-remove">30 septiembre 2002</h3>
+                    <h3 class="uk-margin-remove">30 septiembre 2022</h3>
                 </section>
                 <section class="uk-margin-medium-top">
                     <li>Event</li>
                     <li>Event</li>
                     <li>Event</li>
                 </section>
-                <div class="uk-position-bottom-right">
+                <div class="uk-position-small uk-position-bottom-right uk-overlay uk-overlay-default">
                     <a href="" class="uk-icon-button" uk-icon="plus"></a>
                 </div>
             </div>
